# backup-sync

./: Cargo.toml
.sqlx/: query-002153f45b8ff1f149db7f1a8a00c0f9a92cb4e1798e77d194148255189c72dd.json  query-050c62c30fad747b9e246a67b5ce6602eca821c8cd3f70326c0c2b41075fab97.json  query-22c691200b33654d410cd067282232e8b1f5a0385934da6eb84fdd0f679fa1c0.json  query-26b8df0e999c8b7e946cb43061eaa41f74613465b223f13f07009757e3013e78.json  query-2d0cbbe6fa5d7728f5068e3969ed856717ce45e55002f476dd6740626306a9db.json  query-5664498ffd4f34ede72921c7d22d116b007589eee00d9996e4d2dfcec44f314d.json  query-5ed41c56cd1a5f37fcea0eada989743eefcbed850ab9c90721052ad7b2a485ee.json  query-68ea88dd482709b556944b11645553219c1b1ea80ef05c83f6b202ff3b2b650e.json  query-714ccf7cba22b5d5301bb273c2e59e19112872912cb4d17279f09b8c3b9ce61d.json  query-716fd47145f52eeef4b55622494fd06b59790975f3833b3d4144efcb20b5d111.json  query-ae240062499c078533de74d21fb2c3b05a8d9c2e446406eca346b541a9fc0512.json  query-b6582274fdedb5b1c889752ed388cfc9a43f4f78183b19ab2680d964c354d16e.json  query-ba89d4bdedf7ce72dd54f95c0067cd1eaec619f10969c6bc9dc868e14ee5dcd3.json  query-d27e8d83a3b344d331bc6f00040d42d38e2a6c43183c0de85670ec82204adf3d.json
agent/: Cargo.toml
agent/src/: folder_repo.rs  lib.rs  protocol.rs
agent/src/models/: file_metadata.rs  folder.rs  mod.rs  relative_path.rs
client/: Cargo.toml
client/src/: file_streaming.rs  folder_structure.rs  lib.rs  local_file_ops.rs  main.rs  origin.rs  state.rs  synchronizer.rs
client/tests/: synchronizer_tests.rs
client_ref/: Cargo.toml
client_ref/src/: file_streaming.rs  lib.rs  local_file_ops.rs  main.rs  state.rs  synchronizer.rs
client_ref/tests/: app_state_tests.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/migrations/: 0001_initial_migration.down.sql  0001_initial_migration.up.sql
server/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  middleware_layer.rs  server.rs  state.rs
server/src/handlers/: auth_handler.rs  folder_handler.rs  mod.rs  user_handler.rs
server/src/logic/: computer.rs  folder.rs  mod.rs  user.rs
server/tests/: api_tests.rs  integration_tests.rs  middleware_tests.rs
src/: folder_structure.rs  lib.rs  local_file_ops.rs  local_origin.rs  main.rs  rsync.rs  state.rs  synchronizer.rs
tests/: app_state_tests.rs  synchronizer_tests.rs
ws/: Cargo.toml
ws/src/: handlers.rs  main.rs  state.rs
ws/tests/: integration_tests.rs
