[workspace]
members = ["client", "server", "protocol"]
resolver = "3"

[workspace.package]
description = "File and folder synchronizer local or remote"
edition = "2024"
license = "AGPL-3"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
backup_sync_protocol = { path = "protocol" }
