[workspace]
members = ["client_ref", "ws", "protocol", "server", "agent"]
resolver = "3"

[workspace.package]
description = "File and folder synchronizer local or remote"
edition = "2024"
license = "AGPL-3"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
backup_sync_protocol = { path = "protocol" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "forbid"
