[package]
name = "backup_sync_client"
description = "File and folder synchronizer local or remote"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
librsync = "0.2.5"
notify = "8.2"
notify-debouncer-full = "0.6"
rayon = "1.11"

walkdir = "2.5.0"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3"
