[package]
name = "backup_sync_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
backup_sync_protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
