[package]
name = "backup_sync_server"
version = "0.1.0"
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "request-id"] }
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
backup_sync_protocol = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = "0.5"
anyhow = { workspace = true }
thiserror = "2.0"
